# velecs-graphics-cpp

./: .gitmodules  CMakeLists.txt  README.md
include/velecs/graphics/: Color32.hpp  Common.hpp  ComputeEffect.hpp  ComputePipelineBuilder.hpp  ComputePushConstants.hpp  DescriptorLayoutBuilder.hpp  FrameData.hpp  Graphics.hpp  Material.hpp  Mesh.hpp  MeshBase.hpp  ObjectPushConstant.hpp  ObjectUniforms.hpp  PipelineBuilder.hpp  PipelineBuilderBase.hpp  Rect.hpp  RenderEngine.hpp  RenderPipeline.hpp  RenderPipelineBuilder.hpp  RenderPipelineLayout.hpp  RenderPipelineLayoutBuilder.hpp  Shader.hpp  TestVertex.hpp  Vertex.hpp  VertexBufferParamsBuilder.hpp  VulkanInitializers.hpp
include/velecs/graphics/Components/: Camera.hpp  MeshRenderer.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp
include/velecs/graphics/Memory/: AllocatedBuffer.hpp  AllocatedImage.hpp  DeletionQueue.hpp  DescriptorAllocator.hpp  UploadContext.hpp
include/velecs/graphics/Shader/: IShaderProgram.hpp  PushConstant.hpp  RasterizationShaderProgram.hpp  Shader.hpp  ShaderCache.hpp
include/velecs/graphics/Shader/Reflection/: ShaderMember.hpp  ShaderMemberType.hpp  ShaderReflectionData.hpp  ShaderReflector.hpp  ShaderResource.hpp  ShaderResourceType.hpp
include/velecs/graphics/Shader/ShaderPrograms/: ComputeShaderProgram.hpp  RasterizationShaderProgram.hpp  ShaderProgramBase.hpp
include/velecs/graphics/Shader/Shaders/: ComputeShader.hpp  FragmentShader.hpp  GeometryShader.hpp  Shader.hpp  TessellationControlShader.hpp  TessellationEvaluationShader.hpp  VertexShader.hpp
libs/: CMakeLists.txt
src/: Color32.cpp  ComputePipelineBuilder.cpp  DescriptorLayoutBuilder.cpp  Material.cpp  Mesh.cpp  PipelineBuilder.cpp  RenderEngine.cpp  RenderPipeline.cpp  RenderPipelineBuilder.cpp  RenderPipelineLayout.cpp  RenderPipelineLayoutBuilder.cpp  Shader.cpp  VertexBufferParamsBuilder.cpp  VulkanInitializers.cpp
src/Components/: Camera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
src/Memory/: AllocatedBuffer.cpp  DeletionQueue.cpp  DescriptorAllocator.cpp
src/Shader/: PushConstant.cpp  RasterizationShaderProgram.cpp  Shader.cpp
src/Shader/Reflection/: ShaderMember.cpp  ShaderReflectionData.cpp  ShaderReflector.cpp  ShaderResource.cpp
src/Shader/ShaderPrograms/: ComputeShaderProgram.cpp  RasterizationShaderProgram.cpp  ShaderProgramBase.cpp
src/Shader/Shaders/: ComputeShader.cpp  FragmentShader.cpp  GeometryShader.cpp  Shader.cpp  TessellationControlShader.cpp  TessellationEvaluationShader.cpp  VertexShader.cpp
